changed to response residuals

--- a/vignettes/pwSEM.Rmd
+++ b/vignettes/pwSEM.Rmd
@@ -24,20 +24,20 @@ The pwSEM package contains functions for conducting piecewise structural equatio
 ## Some technical details
 1. The null probabilities associated with each of the d-separation claims in the union basis set of your causal model are based on the generalized covariance statistic of Shah, R.D. & Peters, J. (2020)  The hardness of conditional independence testing and the generalized covariance measure.  The Annals of Statistics 48:1514-1538.  The generalized.covariance() function of this package calculates this statistic and its asymptotic null probability.  A permutation version of this test is available in the perm.generalized.covariance() function for small data sets (<= about 100 observations).
 
-2. Given a d-separation claim: X1 _||_X2|{C}, where C is the set of causal parents of either X1 or X2,  the generalized covariance statistic consists of conducting two regressions (X1~C and X2~C),  getting the residuals from these two regressions, and then inputting these two vectors of residuals to calculate the generalized covariance statistic.  The residuals used are default (i.e. "deviance") residuals since these have zero expected values and approximately constant variance, are exactly the residuals for an ordinary normal linear model, and are closest to the residuals of ordinary linear models for other distributional families.  They are the recommended type by Simon Wood, who developed the mgcv package and also developed much of the underlying theory (Wood 2017, Generalized Additive Models). These regressions can be of any type that are appropriate given the nature of the dependent variables (X1, X2) and the assumed functional form linking them to the causal parents.  The pwSEM() function uses the "deviance" residuals that are returned from either the gam() or gamm4() functions of the mgcv package.
+2. Given a d-separation claim: X1 _||_X2|{C}, where C is the set of causal parents of either X1 or X2,  the generalized covariance statistic consists of conducting two regressions (X1~C and X2~C),  getting the "response" residuals (which are **not** the default type of residuals for gam or gamm4) from these two regressions, and then inputting these two vectors of residuals to calculate the generalized covariance statistic.  These regressions can be of any type that are appropriate given the nature of the dependent variables (X1, X2) and the assumed functional form linking them to the causal parents.
 
-3. Although the current version of pwSEM allows for generalized linear or mixed generalized linear fits when testing the d-separation claims, it can also accommodate generalized additive or mixed generalized additive fits when testing the d-separation claims via the "do.smooth=TRUE" argument.  However, the current version of pwSEM uses the default values for smoother terms and it is possible that the default number of knots chosen might be higher than the specified maximum degrees of freedom; in this case an error message will be produced.  The only solution right now is to do the d-separation tests outside of pwSEM via the generalized.covariance function.
+3. Although the current version of pwSEM allows for generalized linear or mixed generalized linear fits when testing the d-separation claims, it can also accommodate generalized additive or mixed generalized additive fits when testing the d-separation claims via the "do.smooth=TRUE" argument.  You should do this when you believe that the relationships between the variables are nonlinear beyond what is expected (i.e. beyond an exponential for Poisson variables or a logistic for Binomial variables).  However, the current version of pwSEM uses the default values for smoother terms and it is possible that the default maximum number of knots (i.e. 10)might not be high enough for very nonlinear fuctions or not enough for very small data sets; in this case an error message will be produced.  The only solution right now is to do the d-separation tests outside of pwSEM via the generalized.covariance function.
 
 4. If all of the variables in your SEM are normally distributed, then you can also obtain the fits based on standardized variables, resulting in standardized path coefficients.  If any of your variables assume a non-normal distribution then standardized fits are not returned.
 
-5. Optionally, the dependency between any assumed dependent errors is calculated.  This is either a covariance and Pearson correlation for normally distributed variables, or a Spearman correlation otherwise; these are based on the "response" residuals' i.e. based on the actual (observed - predicted) values of the original variables, not the transformed predicted values based on the link function.
+5. Optionally, the dependency between any assumed dependent errors is calculated.  This is either a covariance and Pearson correlation for normally distributed variables, or a Spearman correlation otherwise; these are based on the "response" residuals' i.e. based on the actual (observed - predicted) values of the original variables.
 
 6. The AIC statistic is calculated using the structural equations specified in the equivalent MAG if the equivalent MAG differs from your original causal model.  The AIC statistic is given in Shipley, B. & Douma, J.(2020). Generalized AIC and chi-squared statistics for path models consistent with directed acyclic graphs.  Ecology 101:e02960.
 
 ## pwSEM
 There are three main steps required to fit and output the results of a piecewise SEM:
 
-1. Create a list containing all of the structural equations, following your causal hypothesis (DAG or MAG).  Note that any dependent errors are not included in this first step.  **Note also that you must include the structural equations for all of the exogenous variables as well**.  People often forget this and, if you do, it will result in an error message.  These structural equations are constructed using either the gam() or the gamm4() functions of the mgcv package; see Wood, S.N. (2017).  Generalized Additive Models: An introduction with R (2nd edition).  CRC Press (Chapman & Hall).
+1. Create a list containing all of the structural equations, following your causal hypothesis (DAG or MAG).  Note that any dependent errors are not included in this first step.  **Note also that you must also include the structural equations for all of the exogenous variables.  People often forget this and, if you do, it will result in an error message**.  These structural equations are constructed using either the gam() or the gamm4() functions of the mgcv package; see Wood, S.N. (2017).  Generalized Additive Models: An introduction with R (2nd edition).  CRC Press (Chapman & Hall).
 2. Create output from the pwSEM() function by inputting (1) your list (from step 1), (2) a list of dependent errors (if any), (3) the data set that will be used to fit the data (this must be the same as given inside the gam or gamm4 calls from step 1),  (4) whether you want to use asymptotic probabilities of the d-separation claims or permutation probabilities (for small sample sizes of approximately <100), and (5) how many permutations you require (defaults to 5000).  Note that permutation probabilities will slow down the pwSEM() function.
 3. The output from step 2 contains many objects resulting from the fit, but it is more convenient to use the summary() function to output the results.  Use the argument "structural.equations=TRUE" if you also want the fits of the structural equations to be output.
 
@@ -65,7 +65,7 @@ pwSEM(sem.functions,dependent.errors = NULL,data,use.permutations = FALSE,n.perm
 
 ### Example 1: dependent endogenous errors, normally distributed variables and no nesting structure in the data
 
-Consider first a causal hypothesis in which X1-->X2-->X3-->X4 and with dependent errors between X2 and X4.  If we assume that all four variables are normally distributed, linearly related, and with mutually independent observations (i.e. no nesting structure that would require a mixed model formulation), then we can model the structural equations using the gam() function of the mgcv package without any smoother terms.  For instance, the first link (X1-->X2) would be modelled as gam(X2~X1,data=...,family=gaussian).  This version of gam is equivalent to the lm() function that is well-known to R users: lm(X2~X1,data=...).  As a note, if you believe that the functional relationship between X2 and X1 is nonlinear, you could instead model this as gam(X2~s(X1),data=...,family=gaussian).  The pwSEM() function will accomodate this formulation but cannot include more complicated formulations like changing the number of knots such as gam(X2~s(X1,k=4),data=...,family=gaussian).  
+Consider first a causal hypothesis in which X1-->X2-->X3-->X4 and with dependent errors between X2 and X4.  If we assume that all four variables are normally distributed, linearly related, and with mutually independent observations (i.e. no nesting structure that would require a mixed model formulation), then we can model the structural equations using the gam() function of the mgcv package without any smoother terms.  For instance, the first link (X1-->X2) would be modelled as gam(X2~X1,data=...,family=gaussian).  This version of gam is equivalent to the lm() function that is well-known to R users: lm(X2~X1,data=...).  As a note, if you believe that the functional relationship between X2 and X1 is nonlinear, you could instead model this as gam(X2~s(X1),data=...,family=gaussian).  The pwSEM() function will accommodate this formulation but cannot include more complicated formulations like changing the number of knots such as gam(X2~s(X1,k=4),data=...,family=gaussian).  
 
 Here are the three steps, using the "sim_normal.no.nesting" data set that is included with the pwSEM package:
 
